copilot-metric-viewer/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copilot-metric-viewer
  namespace: copilot-metric-viewer
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: copilot-metrics-viewer.prod.smartdev.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: copilot-metric-viewer
            port:
              number: 3000
  tls:
  - hosts:
    - copilot-metrics-viewer.prod.smartdev.dev
    secretName: copilot-metric-viewer-tls
